[package]
name = "chatgpt-cli"
email = "jrg2156@gmail.com"
authors = ["Juan Gonzalez"]
version = "0.3.1"
edition = "2021"
description = "Talk with ChatGPT from your terminal"
license = "MIT"
repository = "https://github.com/juanrgon/chatgpt-cli"
keywords = ["chatgpt", "gpt-3", "ai", "cli", "chatbot"]

[[bin]]
name = "chatgpt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
dirs = "4.0.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rustix = {version = "0.36.8", features = ["process"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
sys-info = "0.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
